[project]
name = "battles"
version = "1.0.0"
description = "Interactive prediction-based PvP battling system for BallsDex, built on Discord buttons."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "discord.py>=2.3.0",
    "django>=4.2",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["battles*"]
